--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ html,body{
     height: 100%;
     width: 100%;
 }
+a {
+    text-decoration: none;
+    color: #000;
+  }
 #main {
     /* background-color: #000; */
     position: relative;
@@ -302,3 +306,29 @@ font-size: 1.3vw;
 /* #elem-container{
     background-color: #22b12e;
 } */
+
+/* -------footer-start----- */
+.footer {
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    background-color: #eab872;
+    color: #fff;
+    text-align: center;
+  }
+  .footer a {
+    font-size: 30px;
+    color: #fff;
+    padding: 5px;
+  }
+  .foot-nav-frst  {
+    float: left;
+  }
+  .foot-nav-scnd {
+    padding: 2px;
+    float: right !important;
+  }
+  .foot-nav-frst {
+    font-size: 37px;
+  }
+  /* -----footer-end----- */
